<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_software_set"
            android:title="@string/menu_software_set"
            app:showAsAction="never">
    </item>

    <item
            android:id="@+id/menu_change_user"
            android:title="@string/menu_change_user"
            app:showAsAction="never">
    </item>

    <item
            android:id="@+id/menu_exit_login"
            android:title="@string/menu_exit_login"
            app:showAsAction="never">
    </item>

    <item
            android:id="@+id/menu_software_lock"
            android:title="@string/menu_software_lock"
            app:showAsAction="never">
    </item>

</menu>