<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutDescription="@xml/activity_main_scene"
        tools:context=".view.MainActivity">

    <include
            layout="@layout/include_toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/activity_include"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/activity_viewpager_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_include"
            app:layout_constraintBottom_toTopOf="@id/activity_radio_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
            android:id="@+id/activity_radio_main"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:clipChildren="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
                android:id="@+id/activity_rb1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/contacts_press"
                android:drawablePadding="3dp"
                android:paddingTop="8dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/activity_main_character"
                android:textSize="12sp"
                android:background="@drawable/selector_main_rg"/>

        <RadioButton
                android:id="@+id/activity_rb2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:paddingTop="8dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/activity_main_resource"
                android:background="@drawable/selector_main_rg"/>

        <RadioButton
                android:id="@+id/activity_rb3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:paddingTop="8dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:checked="true"
                android:text="@string/activity_main_main"/>

        <RadioButton
                android:id="@+id/activity_rb4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:paddingTop="8dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/activity_main_mainorg"
                android:background="@drawable/selector_main_rg"/>

        <RadioButton
                android:id="@+id/activity_rb5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:paddingTop="8dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/activity_main_minororg"
                android:background="@drawable/selector_main_rg"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>