<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".view.page.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/register_toolbar"
            app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/black0"
                    android:textSize="14sp"/>

            <EditText
                    android:id="@+id/register_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="注册账户"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:textSize="14sp"/>
        </LinearLayout>

        <View
                style="@style/Line1"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_pass"
                    android:textColor="@color/black0"
                    android:textSize="14sp"/>

            <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="账户密码"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:textSize="14sp"/>

        </LinearLayout>

        <View
                style="@style/Line1"
                />

        <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/register"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@color/green2"
                android:textSize="15sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="用短信验证码登录"
                android:textColor="@color/blue0"
                android:textSize="13sp"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">


            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="登录遇到问题?"
                    android:textColor="@color/blue0"
                    android:textSize="14sp"/>

            <View
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_vertical_line"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="使用其他方式登录"
                    android:textColor="@color/blue0"
                    android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>